# helm-charts

./: .cz.toml  .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  .sops.yaml  .yamllint  CNAME  Makefile  README.md  RESTRUCTURE_SUMMARY.md  application-5.1.0.tgz  application-5.1.2.tgz  application-5.1.3.tgz  application-5.1.4.tgz  artifacthub-repo.yaml  cog.toml  ct.yaml  homarr-5.1.0.tgz  homarr-5.1.2.tgz  homarr-5.1.3.tgz  homarr-5.1.4.tgz  homarr-5.1.6.tgz  index.html  index.yaml  justfile  justfile.fix  metube-pod-desc.txt  mkdocs.yml  publish.sh  pyproject.toml  test-values.yaml
.github/: copilot-instructions.md  ct-lint.yaml  dependabot.yml
.github/.ci/: ct-config.yaml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/actions/execute-assert-arc-e2e/: action.yaml
.github/actions/setup-arc-e2e/: action.yaml
.github/workflows/: auto-update-home-assistant.yml  docs.yaml  docs.yml  lint-test.yaml  pages.yaml  publish-2.yaml  publish-helm-chart.yaml  publish.yaml  relaease.yaml  release-2.yaml  release-charts.yaml  release.yaml  renovate.yml
.github/workflows/_archive/: arc-publish-chart.yaml  arc-publish.yaml  arc-release-runners.yaml  arc-update-runners-scheduled.yaml  arc-validate-chart.yaml  arc-validate-runners.yaml  gha-publish-chart.yaml  gha-validate-chart.yaml  global-publish-canary.yaml  global-run-codeql.yaml  global-run-first-interaction.yaml  go.yaml  (+7 more)
.husky/: commit-msg  post-merge  pre-commit  pre-push
application/: Chart.yaml
apps/: README.md
apps/actualbudget-app/: README.md
apps/bitwarden-eso-provider-app/: .gitignore  Dockerfile  README.md  pyproject.toml
apps/bitwarden-eso-provider-app/app/: app.py  requirements.txt
apps/bitwarden-eso-provider-app/base/: helmrelease.yaml  helmrepository.yaml  namespace.yaml
apps/bitwarden-eso-provider-app/overlays/k3s-prod/: helmrelease-patch.yaml  kustomization.yaml
apps/compass-web-app/: README.md
apps/homarr-app/: README.md
apps/home-assistant-app/: README.md
apps/mailrise-app/: README.md
apps/mealie-app/: README.md
apps/metube-app/: README.md
apps/nginx-app/: README.md
apps/paperless-ngx-app/: README.md
apps/pgadmin-app/: README.md
apps/pihole-app/: README.md
apps/postgresql-app/: README.md
apps/proxmox-backup-server-app/: README.md
apps/redisinsight-app/: README.md
apps/restic-backup-app/: README.md
apps/semaphore-app/: README.md
apps/shlink-app/: README.md
apps/uptime-kuma-app/: README.md
charts/: README.md  index.html  index.yaml
charts/.ci/: ct-config-gha.yaml  ct-config.yaml  lint-config.yaml
charts/actualbudget/: README.md  test-install-values.yaml  values.yaml
charts/application/: Chart.yaml  README.md  README.md.backup  values-test.yaml  values.yaml
charts/apps/: README.md
charts/bitwarden-eso-provider/: .helmignore  Chart.yaml  README.md  values.yaml
charts/common/: README.md
charts/compass-web/: Chart.yaml  README.md  values.yaml
charts/homarr/: Chart.yaml  README.md  values-test.yaml  values.yaml
charts/home-assistant/: .helmignore  Chart.yaml  INSTALL-K3S-PROD.md  README.md  values-k3s-prod-minimal.yaml  values-k3s-prod.yaml  values.yaml  verify-openebs-storage.sh
charts/libs/: README.md
charts/mailrise/: Chart.yaml  README.md  test-install-values.yaml  values.yaml
charts/mealie/: Chart.yaml  README.md  values.yaml
charts/metube/: README.md  values.yaml
charts/metube-old/: .helmignore  CHANGELOG.md  Chart.yaml  README.md  values.yaml
charts/netbootxyz/: README.md  values.yaml
charts/nginx/: .copier-answers.yml  Chart.yaml  README.md  values.yaml
charts/paperless-ngx/: README.md  values.yaml
charts/pgadmin/: Chart.yaml  README.md  values.yaml
charts/pihole/: README.md
charts/postgresql/: .helmignore  Chart.yaml  README.md  test-simple.yaml  values-test-install.yaml  values.yaml
charts/proxmox-backup-server/: Chart.yaml  README.md  test-install-values.yaml  values.yaml
charts/redisinsight/: Chart.yaml  README.md  values.yaml
charts/restic-backup/: Chart.yaml  README.md  test-values.yaml  values.yaml
charts/semaphore/: Chart.yaml  README.md  test-install-values.yaml  values.yaml
charts/shlink/: CHANGELOG.md  README.md
charts/uptime-kuma/: Chart.yaml  README.md  values.yaml
docs/: CHANGELOG.md  CONTRIBUTING.md  FURTHER_RESOURCES.md  GIT_HOOKS.md  SECURITY.md  homarr-5.1.4.tgz  homarr-5.1.6.tgz  index.md  index.yaml  requirements.txt
docs/charts/: actualbudget.md  application.md  bitwarden-eso-provider.md  compass-web.md  e2e-test.md  homarr.md  home-assistant.md  index.md  it-tools.md  mailrise.md  mealie.md  metube.md  netbootxyz.md  nginx.md  paperless-ngx.md  pgadmin.md  protonpass-eso-provider.md  proxmox-backup-server.md  redisinsight.md  restic-backup.md  semaphore.md  shlink.md  test-final.md  uptime-kuma.md
docs/getting-started/: installation.md  local-kubernetes.md  quickstart.md
docs/reference/: search.md  values-index.md
docs/secrets/: protonpass-kubernetes.md  protonpass-migration.md  protonpass-profiles.md  protonpass-setup.md
examples/: pihole.yml
homarr/: Chart.yaml  index.yaml
scripts/: chart-drift-check.py  docs-dev.sh  generate-docs.py  health-check.sh  protonpass-provider.sh  sync-chart-docs.py
scripts/hooks/: copier-recopy.sh  sync-boilerplate.py
site/: CNAME  artifacthub-repo.yaml  index.html  index.yaml
sops/: secrets.enc.yaml  secrets.yaml
templates/: README.md  README.md.gotmpl  _helpers.gotmpl
templates/application/: README.md
templates/application-advanced/: values.yaml
templates/chart-copier/: README.md  TEMPLATE_CHANGELOG.md  copier.yml
templates/chart-template/: .helmignore
templates/protonpass-chart-copier/: README.md  copier.yml
tools/: new-chart.sh  update-charts.sh
tools/completions/: protonpass-provider-completion.bash  protonpass-provider-completion.zsh
tools/compose-converter/: .gitignore  INDEX.md  Makefile  README.md  compose2helm.py  pyproject.toml  requirements.txt  setup.sh  test_compose2helm.py  validate-chart.sh
tools/compose-converter/examples/: fullstack-app.yml  mealie.yml  simple-app.yml  wordpress.yml
(+1020 files in other folders)
