[project]
name = "helm-charts-docs"
version = "0.1.0"
description = "Documentation for Helm Charts repository"
readme = "docs/index.md"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
    "mkdocs-minify-plugin>=0.8.0",
    "pymdown-extensions>=10.0",
    "pygments>=2.17.0",
    "pyyaml>=6.0",
]

[dependency-groups]
dev = [
    "pre-commit>=3.0.0",
]
