[project]
name = "bitwarden-eso-provider"
version = "1.0.0"
description = "A webhook provider for External Secrets Operator that integrates with Bitwarden CLI"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [
    { name = "codefuturist" }
]
keywords = ["bitwarden", "kubernetes", "external-secrets", "eso", "secrets-management", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: System :: Systems Administration",
]

# Dependencies (CLI-based implementation)
dependencies = [
    "flask>=3.1.2,<4.0.0",
    "werkzeug>=3.1.3,<4.0.0",
    "python-json-logger>=4.0.0,<5.0.0",
    "json-logging>=1.5.1,<2.0.0",
]

[project.optional-dependencies]
# Development dependencies
dev = [
    "pytest>=9.0.0",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.0",
    "black>=25.0.0",
    "ruff>=0.14.0",
    "mypy>=1.18.0",
    "types-flask>=1.1.0",
]

[project.urls]
Homepage = "https://github.com/codefuturist/helm-charts"
Repository = "https://github.com/codefuturist/helm-charts"
Documentation = "https://github.com/codefuturist/helm-charts/tree/main/charts/bitwarden-eso-provider"
Issues = "https://github.com/codefuturist/helm-charts/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
# UV-specific configuration
dev-dependencies = [
    "pytest>=9.0.0",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.0",
    "black>=25.0.0",
    "ruff>=0.14.0",
    "mypy>=1.18.0",
    "types-flask>=1.1.0",
]

[tool.black]
line-length = 120
target-version = ['py311']
include = '\.pyi?$'

[tool.ruff]
line-length = 120
target-version = "py311"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=app",
    "--cov-report=term-missing",
    "--cov-report=html",
]

[tool.coverage.run]
source = ["app"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
